trunk/Archive2/dc/add596062127a1/output
main.cpp: In instantiation of 'void Func(T) [with T = Base]':
main.cpp:21:11:   required from here
main.cpp:12:18: error: cannot convert 'Base' to 'int' for argument '1' to 'void DoSomething(int)'
     DoSomething(t);    
                  ^
